can remove user from diary
